fix: modal image overflow

--- a/style.css
+++ b/style.css
@@ -585,6 +585,7 @@ h5 {
 
 #pjp-zoom-img .pjp-zoom-img-content {
   height: 80%;
+  max-height: 768px;
   width: 80%;
   /* overflow: hidden; */
   position: relative;
